feat: rm sqlite because of the incompatibility
with refresh.
* Implement user.clj and reload
* Implement refresh of job
* Implement supervisor